kubernetes-AWS-EKS/EKS-deploy/EKS-K8S-Istio/eks-tf/Route-Table.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "route-table-private"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "route-table-public"
  }
}

resource "aws_route_table_association" "private_us_west_2a" {
  subnet_id      = aws_subnet.private_first_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_us_west_2b" {
  subnet_id      = aws_subnet.private_first_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public_us_west_2a" {
  subnet_id      = aws_subnet.public_first_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_us_west_2b" {
  subnet_id      = aws_subnet.public_second_b.id
  route_table_id = aws_route_table.public.id
}
